fix error wrong color

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,17 @@ button {
   top: 0px;
   background-color: var(--color-white);
 }
+/* link style */
+.links {
+  font-family: inherit;
+  font-style: inherit;
+  font-weight: 500;
+  font-size: inherit;
+  line-height: inherit;
+  letter-spacing: inherit;
+
+  color: var(--color-navy-blue);
+}
 .header-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -357,7 +368,7 @@ header {
 .gallery-foto {
   flex-basis: calc((100% - 48px) / 3);
 }
-.gallery-foto:hover .cover-text {
+.link-foto:hover .cover-text {
   transform: translateY(0);
 }
 .foto-cover {
@@ -551,17 +562,6 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-/* link style */
-.links {
-  font-family: inherit;
-  font-style: inherit;
-  font-weight: 500;
-  font-size: inherit;
-  line-height: inherit;
-  letter-spacing: inherit;
-
-  color: var(--color-navy-blue);
 }
 
 .visually-hidden {
